# MAVSDK

./: .gitmodules  .travis.yml  .ycm_extra_conf.py
src/backend/src/: CMakeLists.txt  grpc_server.cpp  grpc_server.h
src/backend/src/core/: core_service_impl.h
src/backend/src/plugins/gimbal/: gimbal_service_impl.h
src/backend/src/plugins/passthrough/: passthrough_service_impl.h
src/backend/test/: action_service_impl_test.cpp  camera_service_impl_test.cpp  info_service_impl_test.cpp  mission_service_impl_test.cpp  offboard_service_impl_test.cpp
src/core/: mavlink_parameters.cpp  mavlink_parameters.h
src/plugins/: CMakeLists.txt
src/plugins/gimbal/: gimbal.cpp  gimbal_impl.cpp  gimbal_impl.h
src/plugins/gimbal/include/plugins/gimbal/: gimbal.h
src/plugins/mission/: mission_impl.cpp
src/plugins/mocap/: mocap_impl.cpp
src/plugins/passthrough/: CMakeLists.txt  passthrough.cpp  passthrough_impl.cpp  passthrough_impl.h
src/plugins/passthrough/include/plugins/passthrough/: passthrough.h
tools/: generate_from_protos.sh
